--- a/jvm/src/main/java/org/sireum/forms/HAMRCodeGenForm.form
+++ b/jvm/src/main/java/org/sireum/forms/HAMRCodeGenForm.form
@@ -45,6 +45,7 @@
                 <item value="seL4"/>
                 <item value="seL4_Only"/>
                 <item value="seL4_TB"/>
+                <item value="Microkit"/>
                 <item value="ros2"/>
               </model>
             </properties>
@@ -220,31 +221,31 @@
           </grid>
         </children>
       </grid>
-      <grid id="d58af" binding="camkesPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d58af" binding="camkesMicrokitPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="etched" title="CAmkES Options"/>
+        <border type="etched" title="CAmkES/Microkit Options"/>
         <children>
-          <component id="ca9ae" class="javax.swing.JLabel" binding="camkesSeL4OutputLabel">
+          <component id="ca9ae" class="javax.swing.JLabel" binding="seL4OutputLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="seL4/CAmkES Output Directory"/>
+              <text value="seL4 Output Directory"/>
             </properties>
           </component>
-          <component id="10fb9" class="javax.swing.JLabel" binding="camkesAuxDirSeL4Label">
+          <component id="10fb9" class="javax.swing.JLabel" binding="sel4AuxCodeDirLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Aux Code Directory for CAmkES"/>
+              <text value="Aux Code Directory for seL4"/>
             </properties>
           </component>
-          <component id="de06f" class="javax.swing.JTextField" binding="camkesAuxCodeDirs">
+          <component id="de06f" class="javax.swing.JTextField" binding="sel4AuxCodeDirs">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -252,7 +253,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="5f731" class="javax.swing.JTextField" binding="camkesOutputDir">
+          <component id="5f731" class="javax.swing.JTextField" binding="sel4OutputDir">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -260,7 +261,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="4d154" class="javax.swing.JButton" binding="camkesSeL4OutputBrowseButton">
+          <component id="4d154" class="javax.swing.JButton" binding="seL4OutputBrowseButton">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -268,7 +269,7 @@
               <text value="..."/>
             </properties>
           </component>
-          <component id="a4029" class="javax.swing.JButton" binding="camkesAuxSeL4BrowseButton">
+          <component id="a4029" class="javax.swing.JButton" binding="sel4AuxCodeDirsBrowseButton">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
