Added branch prediction Logika options.

--- a/jvm/src/main/java/org/sireum/forms/LogikaForm.form
+++ b/jvm/src/main/java/org/sireum/forms/LogikaForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="logikaPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="852" height="725"/>
+      <xy x="20" y="20" width="895" height="803"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -376,7 +376,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="80a49" binding="parPanel" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="80a49" binding="parPanel" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -413,7 +413,7 @@
                   </hspacer>
                   <component id="a76c4" class="javax.swing.JLabel" binding="modeLabel">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Script verification mode"/>
@@ -421,7 +421,7 @@
                   </component>
                   <component id="fbc39" class="javax.swing.JRadioButton" binding="modeAutoRadioButton">
                     <constraints>
-                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <selected value="true"/>
@@ -430,7 +430,7 @@
                   </component>
                   <component id="7b5e2" class="javax.swing.JRadioButton" binding="modeManualRadioButton">
                     <constraints>
-                      <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Manual"/>
@@ -477,6 +477,46 @@
                       <selected value="true"/>
                       <text value="Rewriting parallelization"/>
                     </properties>
+                  </component>
+                  <component id="b8e2a" class="javax.swing.JLabel" binding="branchPredLabel">
+                    <constraints>
+                      <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Branch Parallelization Prediction"/>
+                    </properties>
+                  </component>
+                  <component id="af626" class="javax.swing.JLabel" binding="branchParNumLabel">
+                    <constraints>
+                      <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Number of Branches"/>
+                    </properties>
+                  </component>
+                  <component id="e66bd" class="javax.swing.JTextField" binding="branchParNumTextField">
+                    <constraints>
+                      <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="854e8" class="javax.swing.JLabel" binding="branchParCompLabel">
+                    <constraints>
+                      <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Statement Complexity"/>
+                    </properties>
+                  </component>
+                  <component id="194e6" class="javax.swing.JTextField" binding="branchParCompTextField">
+                    <constraints>
+                      <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
                   </component>
                 </children>
               </grid>
